--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    
+    <main>
+        <img src="/img/pidao1.png" alt="pidao">
+        <h1>Cuzinho hoje?</h1>
+        <div class="botoes">
+            <button>Sim, meu amor! Claro! :)</button>
+            <button onmouseover="nao()">Hoje não</button>
+        </div>
+    </main>
 </body>
 </html>
