--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <img src="/img/pidao1.png" alt="pidao">
         <h1>Cuzinho hoje?</h1>
         <div class="botoes">
-            <button>Sim, meu amor! Claro! :)</button>
-            <button onmouseover="nao()">Hoje não</button>
+            <button class="sim" onmouseover="sim()">Sim, meu amor! Claro! :)</button>
+            <button onmouseover="nao()" id="nao">Hoje não</button>
         </div>
     </main>
 </body>
+<script src="/script/app.js">
+    
+</script>
 </html>
