--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <img src="/img/pidao1.png" alt="pidao">
-        <h1>Cuzinho hoje?</h1>
+        <h1>Vem me ver hoje?</h1>
         <div class="botoes">
             <button class="sim" onmouseover="sim()">Sim, meu amor! Claro! :)</button>
             <button onmouseover="nao()" id="nao">Hoje não</button>
